@@ -8,6 +8,9 @@ Relaxed a consistency check for the local header in zip files.
 The crc and size entries are allowed to contain the real
 value also if a data descriptor is present.
 .IP \(bu
+Fixed the conversion of RGB images with less than 256 color
+with transparency data.
+.IP \(bu
 Minor fixes at the documentation.
 .PD
 .SH ADVANCECOMP VERSION 1.13 2004/11 
