@@ -14,6 +14,10 @@ The crc and size entries are allowed to contain the real
 value also if a data descriptor is present.
 </li>
 <li>
+Fixed the conversion of RGB images with less than 256 color
+with transparency data.
+</li>
+<li>
 Minor fixes at the documentation.
 </li>
 </ul>
